# Weather

./: Cargo.toml  LICENSE  README.md  start.sh
src/: config.json  config.rs  main.rs  render.rs  utils.rs
src/dialog/: dialog.rs
src/patterns/: condition_patterns.rs  mod.rs
src/storage/: constants.rs  mod.rs  storage_manager.rs
src/storage/helpers/: helpers.rs
src/structures/: config_structure.rs  geocode_structure.rs  mod.rs  weather_info.rs
src/utils/: args.rs  mod.rs  select_condition.rs  unixtime_convertor.rs
