[package]
name = "wether"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
cargo-watch = "8.4.1"
chrono = { version = "0.4.31", features = [] }
reqwest = { version = "0.11.22", features = ["json"]}
serde = { version ="1.0.188", features = ["derive"]}
serde_derive = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
rustc-serialize = "0.3.24"
